--- a/index.html
+++ b/index.html
@@ -117,10 +117,34 @@
         .content-container {
             margin-top: 8rem; /* Push the content down to reveal more of the background */
         }
+        /* Hide the content initially */
+        #content {
+            display: none;
+        }
+        #access-denied {
+            display: none;
+            text-align: center;
+            color: red;
+            font-size: 2rem;
+            margin-top: 20%;
+        }
     </style>
+    <script>
+        // Prompt for password before displaying the website
+        document.addEventListener("DOMContentLoaded", function () {
+            const correctPassword = "wong"; // Set your password here
+            const userPassword = prompt("Please enter the password to access the website:");
+            if (userPassword === correctPassword) {
+                document.getElementById("content").style.display = "block";
+            } else {
+                document.getElementById("access-denied").style.display = "block";
+            }
+        });
+    </script>
 </head>
 <body class="p-6">
-    <div class="max-w-4xl mx-auto py-8">
+    <div id="access-denied">Access Denied</div>
+    <div id="content" class="max-w-4xl mx-auto py-8">
         <header class="text-center mb-12">
             <div class="main-title bg-white bg-opacity-90 p-6 rounded-xl shadow-lg inline-block">
                 <h1 class="text-5xl md:text-6xl font-extrabold mb-2 text-oak-theme">
