--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
     
     <footer class="bg-white border-t border-gray-200">
         <div class="container mx-auto px-6 py-4 text-center text-gray-500">
-            <p>Interactive course based on "AI Engineering" by Chip Huyen. Created for educational purposes.</p>
+            <p>Interactive course based on "AI Engineering". Created for educational purposes.</p>
         </div>
     </footer>
 
